# Env_Monitoring_System

./: .gitignore  CMakeLists.txt  Env_Monitoring_System.ioc  STM32F103XX_FLASH.ld  gdb_check_var.txt  gdb_commands.txt  gdb_oled_fps.txt  gdb_step_and_backtrace.txt
.claude/: settings.local.json
Core/Inc/: main.h  stm32f1xx_it.h
Core/Src/: adc.c  dma.c  gpio.c  i2c.c  main.c  main.cpp  stm32f1xx_it.c  tim.c
User/: Sensor.hpp
User/OLED/: oled.c  oled.h
User/OLED_UI/: OLED.c  OLED.h  OLED_Fonts.c  OLED_Fonts.h  OLED_UI.c  OLED_UI.h  OLED_UI_Driver.c  OLED_UI_Driver.h  OLED_UI_MenuData.c  OLED_UI_MenuData.h  OLED_driver.c  OLED_driver.h
User/Sensor/: Sensor.hpp
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
